# formula-one

./: README.md  example_usage.py  initial_input.py  main.py  pyproject.toml
formula_one/: __init__.py  handler.py  main.py
formula_one/services/: __init__.py  analysis.py  data_collection.py  gspread_client.py  reporting.py
